--- a/digital-marketing-service.html
+++ b/digital-marketing-service.html
@@ -5,16 +5,16 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>
-      Webteck - Technology & IT Solutions HTML Template - Services Details
+      Infeanet - Transform Your Business with Cutting-Edge Digital Solutions.
     </title>
     <meta name="author" content="Themeholy" />
     <meta
       name="description"
-      content="Webteck - Technology & IT Solutions HTML Template"
+      content="Infeanet - Transform Your Business with Cutting-Edge Digital Solutions."
     />
     <meta
       name="keywords"
-      content="Webteck - Technology & IT Solutions HTML Template"
+      content="Infeanet - Transform Your Business with Cutting-Edge Digital Solutions."
     />
     <meta name="robots" content="INDEX,FOLLOW" />
     <meta
