--- a/soft-dev-service.html
+++ b/soft-dev-service.html
@@ -148,13 +148,14 @@
       <div id="loader" class="th-preloader">
         <div class="animation-preloader">
           <div class="txt-loading">
-            <span preloader-text="W" class="characters">W</span>
+            <span preloader-text="I" class="characters">I</span>
+            <span preloader-text="N" class="characters">N</span>
+            <span preloader-text="F" class="characters">F</span>
             <span preloader-text="E" class="characters">E</span>
-            <span preloader-text="B" class="characters">B</span>
-            <span preloader-text="T" class="characters">T</span>
+            <span preloader-text="A" class="characters">A</span>
+            <span preloader-text="N" class="characters">N</span>
             <span preloader-text="E" class="characters">E</span>
-            <span preloader-text="C" class="characters">C</span>
-            <span preloader-text="K" class="characters">K</span>
+            <span preloader-text="T" class="characters">E</span>
           </div>
         </div>
       </div>
